sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:3: error: missing arguments for method estBaseTriee in class BaseballEntity;
follow this method with `_' if you want to treat it as a partially applied function
  while(!estBaseTriee){
         ^