sort.baseball.NaiveBaseball.scala.code
override def run() {
  
  while(!estBaseTriee){
    
  }
  
}